--- a/reactjs/vite-project/package.json
+++ b/reactjs/vite-project/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0"
